--- a/components.json
+++ b/components.json
@@ -1,21 +1,22 @@
 {
   "$schema": "https://ui.shadcn.com/schema.json",
-  "style": "default",
+  "style": "new-york",
   "rsc": false,
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.cjs",
     "css": "src/index.css",
-    "baseColor": "slate",
-    "cssVariables": true
+    "baseColor": "neutral",
+    "cssVariables": true,
+    "prefix": ""
   },
+  "iconLibrary": "lucide",
   "aliases": {
-    "@/components": "./src/components",
-    "@/lib": "./src/lib",
-    "@/utils": "./src/lib/utils"
+    "components": "@/components",
+    "utils": "@/lib/utils",
+    "ui": "@/components/ui",
+    "lib": "@/lib",
+    "hooks": "@/hooks"
   },
-  "utils": "./src/lib/utils.ts",
-  "components": "./src/components/ui"
+  "registries": {}
 }
-
-
